--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Hangman-Game</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     
 </head>
 <body>
@@ -34,6 +34,6 @@
           </div>
         </div>
       </div>
-      <script type="text/javascript" src="game.js"></script>
+      <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
